[package]
name = "piston-async"
version = "0.1.0"
edition = "2021"

authors = [
    "John Hui <j-hui@cs.columbia.edu>",
]

[dependencies]
pistoncore-input = "1.0.1"
pistoncore-window = "0.47.1"
pistoncore-event_loop = "0.53.1"
tokio = {version = "1", features = ["time"]}

[dev-dependencies]
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
tokio = {version = "1", features = ["full"]}
